# Ray_tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_vs.bat  linux_build.md  readme.txt
assignements/: assignment1_Uriot_Azambre_Descomps.rar
binary/: coolest.yaml  custom.yaml  final.yaml  plane_cube.yaml  runme.bat  scene01-lights-shadows.yaml  scene01-reflect-lights-shadows+refraction.yaml  scene01-shadows.yaml  scene01-textures.yaml  scene01-zbuffer.yaml  scene_2.yaml
libraries/: CMakeLists.txt
libraries/SDL2/: sdl2-config.cmake
libraries/glm/: glm.cpp  glm.h
libraries/lodepng/: lodepng.cpp  lodepng.h
libraries/yaml/: emitter.cpp  emitter.h  emitterstate.cpp  emitterstate.h  emitterutils.cpp  exceptions.h  exp.cpp  exp.h  map.cpp  node.cpp  node.h  parser.cpp  parser.h  regeximpl.h  scanner.cpp  scanscalar.h  setting.h  simplekey.cpp  stream.cpp
models/: devilduk.mtl
scenes/: coolest.yaml  custom.yaml  dolphin.yaml  duck.yaml  earth.yaml  moon.yaml  plane_cube.yaml  scene01-camera-ss2-400-reflect-lights-shadows.yaml  scene01-camera-ss2-800-reflect-lights-shadows.yaml  scene01-camera-ss4-400-reflect-lights-shadows.yaml  scene01-camera-ss4-800x400-reflect-lights-shadows-angle.yaml  scene01-camera-ss4-800x400-reflect-lights-shadows.yaml  scene01-dolphin.yaml  scene01-gooch.yaml  scene01-lights-shadows.yaml  scene01-normal.yaml  scene01-obj.yaml  scene01-phong.yaml  scene01-planets.yaml  scene01-reflect-lights-shadows+refraction.yaml  scene01-reflect-lights-shadows.yaml  scene01-shadows.yaml  scene01-textures.yaml  scene01-zbuffer.yaml  scene01.yaml  scene02.yaml  scene_1.yaml  scene_2.yaml  soft-shadows.yaml  soft_shadows.yaml
sources/: Raytracer.cpp  Raytracer.hpp  Raytracer_.hpp  cube.cpp  cube.hpp  image.cpp  image.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  object.hpp  plane.cpp  plane.hpp  raytracer.cpp  raytracer.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  triple.cpp  triple.hpp
sources/image/: Image.cpp  Image.hpp
sources/light/: Hit.hpp  Light.hpp  Ray.hpp  light.cpp
sources/objects/: Object.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
sources/objects/meshs/: Cube.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp  OBJ_Loader.h  OBJ_object.hpp
sources/opengl/: Screen.cpp  Screen.hpp  Shader.cpp  Shader.hpp
sources/scene/: Scene.cpp  Scene.hpp
sources/utils/: Camera.cpp  Camera.hpp  Material.hpp  Triple.cpp  Triple.hpp
